# VersionUtils

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt  setup.py
standalone/: standalone.bat
versionutils/: __init__.py  ue_versions.json
