[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VersionUtils"
version = "1.1.0"
authors = [
    { name="Disturbo", email="nottodisturb.disturbo@gmail.com" }
]
description = "Tool to obtain version data for VALORANT"
readme = "README.MD"
license = {file = "LICENSE"}
dependencies = [
    "schedule~=1.1.0"
]

[project.urls]
"GitHub" = "https://github.com/NotToDisturb/VersionUtils"

[tool.setuptools]
packages = ["versionutils"]