[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VersionUtils"
version = "1.6"
authors = [
    { name="Disturbo", email="nottodisturb.disturbo@gmail.com" }
]
description = "Tool to obtain version data for VALORANT"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "schedule~=1.1.0",
    "fake-useragent~=1.1.1"
]

[project.urls]
"GitHub" = "https://github.com/NotToDisturb/VersionUtils"

[tool.setuptools]
packages = ["versionutils"]